Fixed the warning about potential memory leak and got rid of unnecessary test